--- a/src/app/main/search/searchbyid/searchById.html
+++ b/src/app/main/search/searchbyid/searchById.html
@@ -30,7 +30,7 @@
                                     <input type="text" class="form-control input-rounded"
                                            placeholder="Enter Id" ng-model="viewId"></div>
                                 <div  class="col-md-12" style="color: red" ng-if="message != ''">
-                                    Invalid Member ID
+                                    Sorry, this member's profile does not exist.
                                 </div>
                             </div>
                             <hr>
