--- a/src/app/toolbar/dashboard/dbToolbar.html
+++ b/src/app/toolbar/dashboard/dbToolbar.html
@@ -195,7 +195,7 @@
                                             <i class="icon-user"></i> Edit Partner Preference </a>
                                     </li>
                                     <li>
-                                        <a ui-sref="profile">
+                                        <a ui-sref="managephoto">
                                             <i class="icon-user"></i>Add Photo </a>
                                     </li>
                                     <li>
