--- a/src/app/main/matches/matches.html
+++ b/src/app/main/matches/matches.html
@@ -75,7 +75,7 @@
                             <div class="actions">
                                 <div class="btn-group">
                                     <a class="btn btn-sm  dropdown-toggle" href="javascript:;" data-toggle="dropdown">
-                                        <i class="fa fa-ellipsis-v"></i>
+                                        <img src="/assets/icons/dot.png" >                               </a>
                                     </a>
                                     <ul class="dropdown-menu pull-right">
                                         <li>
