--- a/src/app/main/searchresults/searchresults.html
+++ b/src/app/main/searchresults/searchresults.html
@@ -49,8 +49,7 @@
                             <div class="actions">
                                 <div class="btn-group">
                                     <a class="btn btn-sm  dropdown-toggle" href="javascript:;" data-toggle="dropdown">
-                                        <i class="fa fa-ellipsis-v"></i>
-                                    </a>
+<img src="/assets/icons/dot.png" >                               </a>
                                     <ul class="dropdown-menu pull-right">
                                         <li>
                                             <a href="javascript:;">
