--- a/src/app/main/view-profile/viewProfile.html
+++ b/src/app/main/view-profile/viewProfile.html
@@ -31,7 +31,7 @@
                                 <div class="actions" style="font-size: 20px">
                                     <div class="btn-group">
                                         <a class="btn btn-sm  dropdown-toggle" href="javascript:;" data-toggle="dropdown">
-                                            <i class="fa fa-ellipsis-v"></i>
+                                            <img src="/assets/icons/dot.png" >                               </a>
                                         </a>
                                         <ul class="dropdown-menu pull-right">
                                             <li>
