--- a/src/app/directive/image-scroll/image-scroll.html
+++ b/src/app/directive/image-scroll/image-scroll.html
@@ -10,14 +10,14 @@
 
 </div>
 <div class="col-md-12" style="text-align: center;margin-top:20px" ng-if="size > 1">
-    <div style="height: 30px;;background-color: beige;">
-    <a style="height: 30px;" ng-if="size > 1 && indexValue != 0" ng-click="imageBackward()" class=" btn   default pull-left">
-        <i class="glyphicon glyphicon-circle-arrow-left"></i>
-    </a>
-        <span style="line-height: 30px" class="bold">{{indexValue+1}}/{{size}}</span>
-
-    <a  style="height: 30px;" ng-if="size > 1 && indexValue != size-1" ng-click="imageForward()" class="btn default pull-right">
-       <i class="glyphicon glyphicon-circle-arrow-right"></i>
+    <div style="height: 35px;">
+    <a style="height: 35px;" ng-if="size > 1 && indexValue != 0" ng-click="imageBackward()" class=" btn    ">
+        <img src="/assets/icons/arrow-left.png" >                               </a>
+    </a>&nbsp;&nbsp;
+        <span style="line-height: 35px" class="bold">{{indexValue+1}}/{{size}}</span>
+        &nbsp;&nbsp;
+    <a  style="height: 35px;" ng-if="size > 1 && indexValue != size-1" ng-click="imageForward()" class="btn ">
+        <img src="/assets/icons/arrow-right.png" >                               </a>
     </a>
         </span>
 </div>
