--- a/src/app/main/settings/deactivateProfile/deactivateProfile.html
+++ b/src/app/main/settings/deactivateProfile/deactivateProfile.html
@@ -56,9 +56,13 @@
                             <hr>
                             <div class="form-group ">
                                 <div class="col-md-offset-9 ">
-                                    <button type="button" class=" btn red input-rounded uppercase"
+                                    <button ng-if="activate == '0'" type="button" class=" btn red input-rounded uppercase"
                                             ng-click="deactivateProfile()">
                                         Deactivate profile
+                                    </button>
+                                    <button  ng-if="activate != '0'" type="button" class=" btn green input-rounded uppercase"
+                                            ng-click="activateProfile()">
+                                        Activate profile
                                     </button>
                                 </div>
                             </div>
