--- a/src/app/main/settings/deactivateProfile/deactivateProfile.html
+++ b/src/app/main/settings/deactivateProfile/deactivateProfile.html
@@ -55,14 +55,14 @@
                             </div>
                             <hr>
                             <div class="form-group ">
-                                <div class="col-md-offset-9 ">
-                                    <button ng-if="activate == '0'" type="button" class=" btn red input-rounded uppercase"
+                                <div class="col-md-12 ">
+                                    <button ng-if="activate == '0'" type="button" class="pull-right btn red input-rounded uppercase"
                                             ng-click="deactivateProfile()">
-                                        Deactivate profile
+                                        DEACTIVATE NOW
                                     </button>
-                                    <button  ng-if="activate != '0'" type="button" class=" btn green input-rounded uppercase"
+                                    <button  ng-if="activate != '0'" type="button" class="pull-right btn green input-rounded uppercase"
                                             ng-click="activateProfile()">
-                                        Activate profile
+                                        ACTIVE NOW
                                     </button>
                                 </div>
                             </div>
