--- a/src/app/main/login/loginContent.html
+++ b/src/app/main/login/loginContent.html
@@ -249,7 +249,7 @@
         <div class="form-group">
             <label class="checkbox-inline" class="custon-text">
                 <input type="checkbox" icheckbox_flat-red class="icheck "> Remember me</label>
-            <label class="pull-right"><a href="" class="font-red-mint"> Forgot your password?</a></a></label>
+            <label class="pull-right"><a href="" class="font-red-mint" ng-click="vm.forgotPassword()"> Forgot your password?</a></a></label>
         </div>
     </div>
 
@@ -274,6 +274,47 @@
                 here</a></label>
 
         </div>
+
+
+        <!--<button class="btn btn-primary" type="button" ng-click="vm.ok()">Save</button>-->
+        <!--<button class="btn btn-warning" type="button" ng-click="vm.cancel()">Cancel</button>-->
+    </div>
+        </form>
+</script><script type="text/ng-template" id="forgotPassword.html">
+    <form name="loginForm">
+
+    <div class="modal-header login-pannel-title">
+        <div class="caption">
+            <span class="caption-subject  font-black bold uppercase">Forgot your password?</span></div>
+    </div>
+
+    <div class="modal-body" >
+
+        <div class="form-group">
+            Enter your Matri ID/ Register Mobile No/ Registered Email ID and we'll send you a link and PIN to reset your password.
+        </div>
+        <div class="form-group">
+            <input class="form-control spinner input-rounded" type="text"
+                   placeholder="Email / Mobile Number / Member ID" ng-model="login.username" required/>
+        </div>
+    </div>
+
+
+    </div>
+    <div class="modal-footer login-modal-footer">
+        <div class="row">
+        <div class="col-md-6 col-sm-6 col-xs-6" style="text-align:right">
+            <button ng-disabled="loginForm.$invalid" type="button" style="width: 100%" class="  btn red input-rounded" ng-click="vm.ok(login)">
+                Reset Password
+            </button>
+            </div>        <div class="col-md-6 col-sm-6 col-xs-6" style="text-align:left">
+
+        <button type="button" class="   btn btn-default input-rounded" style="width: 100%" ng-click="vm.cancel()">
+                Cancel
+            </button>
+        </div>
+        </div>
+
 
 
         <!--<button class="btn btn-primary" type="button" ng-click="vm.ok()">Save</button>-->
