--- a/src/app/main/payment/payment.html
+++ b/src/app/main/payment/payment.html
@@ -81,7 +81,7 @@
                                                                     <div class="row">
                                                                         <div class="col-md-12 margin-top-10 uppercase make-payment"
                                                                              ng-click="selectPackage(payment.classic3Months)">
-                                                                            Make payment
+                                                                            Make a payment
                                                                         </div>
                                                                     </div>
                                                                 </div>
@@ -93,7 +93,7 @@
                                                                     <div class="row">
                                                                         <div class="col-md-12 margin-top-10 uppercase make-payment"
                                                                              ng-click="selectPackage(payment.classicAdv3Months)">
-                                                                            Make payment
+                                                                            Make a payment
                                                                         </div>
                                                                     </div>
 
@@ -156,7 +156,7 @@
                                                                     <div class="row">
                                                                         <div class="col-md-12 margin-top-10 uppercase make-payment"
                                                                              ng-click="selectPackage(payment.classic6Months)">
-                                                                            Make payment
+                                                                            Make a payment
                                                                         </div>
                                                                     </div>
                                                                 </div>
@@ -168,7 +168,7 @@
                                                                     <div class="row">
                                                                         <div class="col-md-12 margin-top-10 uppercase make-payment"
                                                                              ng-click="selectPackage(payment.classicAdv6Months)">
-                                                                            Make payment
+                                                                            Make a payment
                                                                         </div>
                                                                     </div>
 
@@ -290,7 +290,7 @@
                                                             <div class="row">
                                                                 <div class="col-md-12 margin-top-10 uppercase make-payment"
                                                                      ng-click="selectPackage(payment.flexible)">
-                                                                    Make payment
+                                                                    Make a payment
                                                                 </div>
                                                             </div>
 
